--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,11 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
+*.txt
 
 ### Eclipse ###
 .apt_generated
@@ -37,3 +39,4 @@ build/
 
 ### Mac OS ###
 .DS_Store
+.PVS-Studio/
