--- a/producer-service/Dockerfile
+++ b/producer-service/Dockerfile
@@ -1,18 +1,19 @@
 # ЭТАП 1: Сборка (Build stage)
 FROM maven:3.9.6-eclipse-temurin-21 AS build
 
-# Копируем файлы проекта внутрь образа
 WORKDIR /app
-COPY ../pom.xml .
-COPY src ./src
-# Собираем проект
-RUN mvn clean package -DskipTests
+COPY pom.xml .
+COPY contracts ./contracts
+COPY producer-service ./producer-service
+
+RUN mvn clean install -pl contracts -am -DskipTests
+RUN mvn clean package -pl producer-service -am -DskipTests
 
 # ЭТАП 2: Запуск (Run stage)
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-# Копируем собранный jar-файл из этапа сборки
-COPY --from=build /app/target/test-project-2-1.0-SNAPSHOT.jar app.jar
+
+COPY --from=build /app/producer-service/target/producer-service-1.0-SNAPSHOT.jar app.jar
 EXPOSE 8080
-# Команда запуска
+
 ENTRYPOINT ["java", "-jar", "app.jar"]
