added module validator and updated

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>com.networknt</groupId>
+                <artifactId>json-schema-validator</artifactId>
+                <version>${networknt.jsonschema.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
