--- a/validator-service/Dockerfile
+++ b/validator-service/Dockerfile
@@ -1,12 +1,13 @@
 # ЭТАП 1: Сборка (Build stage)
 FROM maven:3.9.6-eclipse-temurin-21 AS build
 
-# Копируем родительский pom.xml и модули
 WORKDIR /app
 COPY pom.xml .
 COPY contracts ./contracts
+COPY producer-service ./producer-service
 COPY validator-service ./validator-service
 
+# Собираем только нужные модули
 RUN mvn clean install -pl contracts -am -DskipTests
 RUN mvn clean package -pl validator-service -am -DskipTests
 
